# opengl-demos

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md
helloTriangle/: helloTriangle.sln
helloTriangle/helloTriangle/: helloTriangle.cpp  helloTriangle.vcxproj  helloTriangle.vcxproj.filters
helloWindow/: helloWindow.sln
helloWindow/helloWindow/: helloTriangle.cpp  helloWindow.vcxproj  helloWindow.vcxproj.filters  hellowWindow.cpp
include/glad/: glad.h
src/: glad.c  helloTriangle.cpp
